# argclass

./: CLAUDE.md  README.md  README.rst  argclass.py  argclass.pyi  conftest.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: docker-docs.yml  docs.yml  tests.yml  tox.yml
argclass/: __init__.py  __main__.py  _actions.py  _defaults.py  _factory.py  _parser.py  _store.py  _types.py  _utils.py  actions.py  defaults.py  emit.py  exceptions.py  factory.py  parser.py  secret.py  store.py  types.py  utils.py
docs/: Dockerfile  Makefile  api.md  arguments.md  changelog.md  cheatsheet.md  conf.py  config-file-reference.md  config-files.md  config-generation.md  environment.md  errors.md  examples.md  faq.md  glossary.md  groups.md  index.md  integrations.md  llm.txt  llms.txt  llmstxt.py  migration.md  pdf-contents.md  pitfalls.md  quickstart.md  robots.txt  secrets.md  security.md  subparsers.md  tutorial.md
docs/_templates/: base.html
docs/explanation/: configuration-model.md  index.md  parsers-and-groups.md  security.md  type-system.md  why-argclass.md
src/: argclass.py
tests/: test_audit_fixes.py  test_config.py  test_config_argument.py  test_edge_cases.py  test_error_messages.py  test_exceptions.py  test_future_annotations.py  test_generate_config.py  test_integration.py  test_nested_groups.py  test_reserved_names.py  test_secret_string.py  test_simple.py  test_store.py  test_subparsers.py
