[project]
name = "argclass"
version = "1.5.0"
description = "Declarative CLI parser with type hints, config files, and environment variables - zero dependencies"
authors = [{ name = "Dmitry Orlov", email = "me@mosquito.su" }]
keywords = [
    "argparse",
    "cli",
    "command-line",
    "argument-parser",
    "type-hints",
    "dataclass",
    "config",
    "environment-variables",
    "declarative",
]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/mosquito/argclass"
Documentation = "https://docs.argclass.com"
Source = "https://github.com/mosquito/argclass"
Tracker = "https://github.com/mosquito/argclass/issues"

[dependency-groups]
dev = [
    "coveralls>=3.3.1",
    "pytest>=7.2",
    "pytest-cov>=4.0.0",
    "ruff>=0.8",
    "setuptools>=69.0.2",
    "markdown-pytest>=0.3.1",
    "pyyaml>=6.0.2,<7",
]
mypy = ["mypy>=1.13"]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "myst-parser>=3.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-design>=0.6",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["C901"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["E501"]

[tool.uv]
default-groups = [
    "dev",
    "mypy",
]

[tool.hatch.build.targets.sdist]
include = ["argclass"]

[tool.hatch.build.targets.wheel]
include = ["argclass"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
source = ["argclass"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
]
show_missing = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false
files = "argclass"
